Stop event month text from wrapping on big screens
Add css rule to stop the responsive font resizing from causing
the date start month text (eg. "Oct") from wrapping on larger
viewport sizes on events page.

--- a/events/static/events/css/event-card.css
+++ b/events/static/events/css/event-card.css
@@ -42,3 +42,7 @@
     background-color: inherit;
     box-shadow: none;
   }
+
+.event-date-txt{
+  white-space: nowrap;
+}
